force-app/main/default/objects/Phase__c/fields/Booking_Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Booking_Terms_Condition__c</fullName>
    <label>Booking Terms &amp; Condition</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>