force-app/main/default/objects/Phase__c/fields/Final_Quotation_Term_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Final_Quotation_Term_and_Condition__c</fullName>
    <label>Final Quotation Term and Condition</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>