force-app/main/default/objects/Phase__c/fields/Garden_JSON__c.field-meta.xml
<CustomField>
    <fullName>Garden_JSON__c</fullName>
    <description>This field in used in Inventory LWC to retrieve Garden in the Phase</description>
    <label>Garden JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>