force-app/main/default/objects/Phase__c/fields/Grid_Length__c.field-meta.xml
<CustomField>
    <fullName>Grid_Length__c</fullName>
    <label>Grid Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>