force-app/main/default/objects/Phase__c/fields/Grid_Width__c.field-meta.xml
<CustomField>
    <fullName>Grid_Width__c</fullName>
    <label>Grid Width</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>