force-app/main/default/objects/Phase__c/fields/Number_Of_Zone__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Zone__c</fullName>
    <label>Number Of Zone</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>