force-app/main/default/objects/Phase__c/fields/Plot_JSON__c.field-meta.xml
<CustomField>
    <fullName>Plot_JSON__c</fullName>
    <description>This field in used in Inventory LWC to retrieve allotted plot in the Phase</description>
    <label>Plot JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>