force-app/main/default/objects/Phase__c/fields/Quotation_Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Terms_Condition__c</fullName>
    <label>Quotation Terms &amp; Condition</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>