force-app/main/default/objects/Phase__c/fields/Road_JSON__c.field-meta.xml
<CustomField>
    <fullName>Road_JSON__c</fullName>
    <description>This field in used in Inventory LWC to retrieve road in the Phase</description>
    <label>Road JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>