force-app/main/default/objects/Phase__c/validationRules/Restrict_Field_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Field_Update</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        AND(NOT(ISBLANK(PRIORVALUE(Grid_Length__c))), Grid_Length__c != PRIORVALUE(Grid_Length__c)),
        AND(NOT(ISBLANK(PRIORVALUE(Grid_Width__c))), Grid_Width__c != PRIORVALUE(Grid_Width__c))
    )
)</errorConditionFormula>
    <errorMessage>You cannot modify this field once it has been set.</errorMessage>
</ValidationRule>